fix: improve focus style of buttons in headers so they have sufficient visibility

--- a/src/main/webapp/uii/template/css/src/components/_buttons.scss
+++ b/src/main/webapp/uii/template/css/src/components/_buttons.scss
@@ -157,3 +157,10 @@ button,
   background: rgba(0, 0, 0, 0.4);
   color: var(--clr-white);
 }
+
+.box__title .btn {
+  &:focus {
+    border: 1px solid;
+    color: inherit;
+  }
+}
